--- a/src/assets/css/core/_vars.scss
+++ b/src/assets/css/core/_vars.scss
@@ -4,10 +4,30 @@
 $maxW: 414px;
 // 最小宽度
 $minW: 320px;
+// 左右间距
+$padding: 10px;
+// 圆角大小
+$borderRadius: 6px;
+
+// 常规输入框按钮等的高度
+$inputH: 44px;
 
 // 基础字体大小
 $fontSize: 14px;
 
+// 颜色
+$colorBlue: #489dde;
+$colorRed: red;
+
+$fontColorBlack: #333;
+$fontColor: #666;
+$fontColorGray: #999;
+$fontColorBlue: #489dde;
+$borderColor: #ddd;
+
+$bgGray: #f1f1f1;
+// 推荐组件
+$tuijianImgW: 66px;
 
 // 其他项目
 
