基本页面书写完毕，很多页面待设计制作

--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -48,6 +48,11 @@ h1, h2, h3, h4, h5 {
 	font-weight: normal;
 }
 
+input[type="button"], input[type="submit"], input[type="reset"], input[type="file"]::-webkit-file-upload-button, button {
+    padding: 0;
+}
+
 .hide {
 	display: none !important;
 }
+
