--- a/src/assets/css/core/_vars.scss
+++ b/src/assets/css/core/_vars.scss
@@ -6,6 +6,13 @@ $maxW: 414px;
 $minW: 320px;
 // 左右间距
 $padding: 10px;
+
+// 头部高度
+$headerH: 60px;
+
+// container距底部高度
+$containerBottom: 70px;
+
 // 圆角大小
 $borderRadius: 6px;
 
@@ -27,7 +34,7 @@ $borderColor: #ddd;
 
 $bgGray: #f1f1f1;
 // 推荐组件
-$tuijianImgW: 66px;
+$tuijianImgW: 100px;
 
 // 其他项目
 
