--- a/src/assets/css/rank.scss
+++ b/src/assets/css/rank.scss
@@ -13,7 +13,18 @@
 	height: 100%;
 }
 
+.tab .vux-tab {
+	position: fixed;
+	top: $headerH;
+	left: 0;
+	width: 100%;
+	height: 44px;
+	background: #fff;
+	z-index: 10
+}
+
 .list {
 	height: 100%;
+	padding-top: 44px;
 	padding-bottom: 60px;
 }
