--- a/src/assets/css/core/_vars.scss
+++ b/src/assets/css/core/_vars.scss
@@ -25,6 +25,8 @@ $fontSize: 14px;
 // 颜色
 $colorBlue: #489dde;
 $colorRed: red;
+$colorYellow: #fe6e12;
+$colorGreen: #09BB07;
 
 $fontColorBlack: #333;
 $fontColor: #666;
