--- a/src/assets/css/img-text.scss
+++ b/src/assets/css/img-text.scss
@@ -7,6 +7,12 @@
 	display: flex;
 
 	&.img-text-rank {
+		.text {
+			.title {
+				width: 80%;
+			}
+		}
+
 		.img-text-img {
 			width: 66px;
 			height: 66px;
@@ -29,11 +35,11 @@
 .img-text-img {
 	position: relative;
 	width: 90px;
-	height: 110px;
+	// height: 110px;
 
 	img {
 		width: 100%;
-		height: 100%;
+		// height: 100%;
 	}
 
 	.status {
