细节微调，业务变更

--- a/src/assets/css/core/_vars.scss
+++ b/src/assets/css/core/_vars.scss
@@ -27,16 +27,27 @@ $colorBlue: #489dde;
 $colorRed: red;
 $colorYellow: #fe6e12;
 $colorGreen: #09BB07;
+$colorBlue: #0065bd;
 
 $fontColorBlack: #333;
 $fontColor: #666;
 $fontColorGray: #999;
-$fontColorBlue: #489dde;
+$fontColorBlue: #0065bd;
 $borderColor: #ddd;
 
 $bgGray: #f1f1f1;
 // 推荐组件
 $tuijianImgW: 60px;
+
+
+//购物车模块
+$cartH: 50px;
+$cartColorYellow: #FF9500;
+$cartColorRed: #DD2727;
+
+
+
+
 
 // 其他项目
 
