--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -66,3 +66,7 @@ input[type="button"], input[type="submit"], input[type="reset"], input[type="fil
 .vux-slider > .vux-swiper > .vux-swiper-item {
 	overflow-y: auto;
 }
+
+.btns, .pay-btn {
+	padding: $padding;
+}
