业务重构截止

--- a/src/assets/css/core/_vars.scss
+++ b/src/assets/css/core/_vars.scss
@@ -11,7 +11,7 @@ $padding: 10px;
 $headerH: 60px;
 
 // container距底部高度
-$containerBottom: 70px;
+$containerBottom: 50px;
 
 // 圆角大小
 $borderRadius: 6px;
@@ -23,7 +23,9 @@ $inputH: 44px;
 $fontSize: 14px;
 
 // 颜色
-$colorBlue: #489dde;
+$colorBlue: #016aca;
+$colorOrange: #ff8501;
+
 $colorRed: red;
 $colorYellow: #fe6e12;
 $colorGreen: #09BB07;
@@ -45,7 +47,7 @@ $cartH: 50px;
 $cartColorYellow: #FF9500;
 $cartColorRed: #DD2727;
 
-
+$disabledPay: rgba(0, 0, 0, .2);
 
 
 
