--- a/src/assets/css/img-text.scss
+++ b/src/assets/css/img-text.scss
@@ -35,11 +35,18 @@
 .img-text-img {
 	position: relative;
 	width: 90px;
-	// height: 110px;
 
 	img {
-		width: 100%;
-		// height: 100%;
+		position: absolute;
+	  top: 0;
+	  bottom: 0;
+	  left: 0;
+	  right: 0;
+		max-height: 100%;
+	  max-width: 100%;
+	  width: auto;
+	  height: auto;
+	  margin: auto;
 	}
 
 	.status {
@@ -74,21 +81,35 @@
 	.title {
 		width: 100%;
 		font-size: 18px;
+		line-height: 30px;
+		display: flex;
+
+		p {
+			flex: 1;
+			@include ellipsisOne();
+			text-align: left;
+			padding-right: 1em;
+		}
 	}
 
-	h5, p {
+	& > h5, & > p {
 		float: left;
 		width: 100%;
 	}
 
 	span {
 		float: right;
-		color: $fontColorBlue;
-		font-size: 14px;
+		color: $colorOrange;
+		font-size: $fontSize;
 	}
 	
 	.desc, .type {
 		padding: 6px 0;
+	}
+
+	.desc {
+		// @include ellipsisMore(2);
+		color: $fontColorGray;
 	}
 }
 
