--- a/src/assets/css/themes.less
+++ b/src/assets/css/themes.less
@@ -1,4 +1,4 @@
 @tabbar-text-active-color: #0065bd;
-@tab-bar-active-color: #0065bd;
-@tab-text-active-color: #0065bd;
+@tab-bar-active-color: #ff8501;
+@tab-text-active-color: #ff8501;
 
