--- a/src/assets/css/themes.less
+++ b/src/assets/css/themes.less
@@ -1,4 +1,7 @@
+@paddingTop: 12px;
+@padding: 12px;
 @tabbar-text-active-color: #0065bd;
 @tab-bar-active-color: #ff8501;
 @tab-text-active-color: #ff8501;
 
+@weuiCellsMarginTop: @paddingTop;
