--- a/src/assets/css/icon.scss
+++ b/src/assets/css/icon.scss
@@ -16,12 +16,14 @@ $icon: service, // 服务
 			 user-kefu, // 用户客服
 			 user-mall, // 用户生成订单
 			 user-feedback, // 用户信息反馈
-			 user-person, // 用户个人信息
+			 // user-person, // 用户个人信息
 			 user-share, // 用户分享
 			 user-study, // 用户学习
 			 user-tuiguang, // 用户推广
 			 user-tuisong, // 推送设置
 			 user-quotation, // 语录
+			 user-yewu, // 业务办理
+			 user-xietong, // 协同办公
 			service; // 
 
 .icon {
